--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "lab8",
+  "version": "0.1.0",
+  "private": false,
+  "scripts": {
+    "build": "node index.js",
+    "start": "node index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
